Bug Fixes and Layout Issue on Product Detail Page Chinese Translation

--- a/wp-content/themes/wecreate/resources/assets/src/sass/components/_products.scss
+++ b/wp-content/themes/wecreate/resources/assets/src/sass/components/_products.scss
@@ -888,7 +888,8 @@ ul.products[class*=columns-] li.product,
         margin-bottom: 40px !important;
     }
 
-    .add-on-product {
+    .add-on-product,
+    .add-on-product-zh {
         .price_wrapper {
             margin-top: 0;
 
@@ -900,6 +901,7 @@ ul.products[class*=columns-] li.product,
             }
         }
 
+        & > .woocommerce-tabs,
         .woocommerce-product-details__short-description {
             display: none;
         }
@@ -921,6 +923,57 @@ ul.products[class*=columns-] li.product,
             &:not(:last-child) {
                 margin-bottom: 16px;
             }
+        }
+
+        .button {
+            padding: 12px 24px!important;
+            background-color: $purple !important;
+            color: white!important;
+
+            @include mobile {
+                padding: 12px 40px!important;
+            }
+
+            &:hover {
+                background-color: white!important;
+                color: $purple!important;
+            }
+        }
+        
+        input.qty {
+            border: 0;
+            padding: 0px 0;
+            margin-top: 21px;
+            width: 24px;
+
+            @include mobile {
+                position: relative;
+                top: -9px;
+            }
+        }
+
+        #decrease,
+        #increase {
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: contain;
+            width: 32px;
+            height: 32px;
+            position: relative;
+            top: 7px;
+
+            @include desktop-only {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        #decrease {
+            background-image: url('/wp-content/themes/wecreate/resources/assets/images/minus.svg');
+        }
+
+        #increase {
+            background-image: url('/wp-content/themes/wecreate/resources/assets/images/plus.svg');
         }
     }
 
